Enhance visit tracking functionality in VisitTrackingInterceptor by implementing an in-memory cache for user visits, allowing for more efficient tracking and preventing duplicate visits within the same day. Updated user ID extraction to utilize CustomUserDetails for authenticated users. Added date range filtering capabilities in dashboard templates and JavaScript, improving user experience with date validation and auto-setting features. Refined CSS for date range filters and adjusted styles for better visibility in the dashboard.

--- a/src/main/resources/static/css/backend.css
+++ b/src/main/resources/static/css/backend.css
@@ -4772,6 +4772,7 @@ a.badge-secondary.focus {
 }
 
 .badge-success {
+  height: 20px;
   color: #fff;
   background-color: #8ac3a3;
 }
